[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "seine"
version = "0.0.1"
authors = [
  { name="Shaafiee", email="shaafiee@gmail.com" },
]
description = "ETL for BigQuery"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL V3"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/shaafiee/seine"
Issues = "https://github.com/shaafiee/siene/issues"
