[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "bqseine"
version = "0.4.1"
authors = [
  { name="Shaafiee", email="shaafiee@gmail.com" },
]
description = "ETL for BigQuery"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/shaafiee/seine"
Issues = "https://github.com/shaafiee/siene/issues"
